<resources>
    <string name="app_name">DrawCoco</string>

    <string name="selectorIvan">Pantallas Ivan</string>
    <string name="selectorKevin">Pantallas Kevin</string>
    <string name="selectorJose">Pantallas Jose</string>
    <string name="selectorAndres">Pantallas Andres</string>
    <string name="botonLogin">Login</string>
    <string name="botonCliente">Cliente</string>
    <string name="botonGaleria">Galeria</string>
    <string name="botonEstadisticas">Estadisticas</string>
    <string name="botonRegistro">Registro</string>
    <string name="botonAjustes">Ajustes</string>
    <string name="botonFiltar">Filtrar</string>
    <string name="botonInicio">Inicio</string>
    <string name="botonCreacionPost">Creacion Post</string>
    <string name="botonVisualizacionPost">Visualizacion Post</string>
    <string name="botonCreador">Creador</string>
    <string name="botonModoDiseño">Modo Diseño</string>
    <string name="botonMenuDesplegable">Menu Desplegable</string>

    <!--String de la Activity Galeria-->
    <string name="busqueda">Busqueda...</string>
    <string name="clickParaIrAlPost">Click Para Ir Al Post</string>

    <!--String de la Activity Estadisticas-->
    <string name="cabeceraEstadisticas">Estadisticas de</string>
    <string name="textoDineroGanado">Dinero obtenido mensual</string>
    <string name="textoNumeroUsuarios">Usuarios suscritos</string>

    <!--String de la Activity Login-->
    <string name="emailLogin">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="recordarCuenta">Recordar cuenta</string>
    <string name="Login">Login</string>
    <string name="noTienesCuenta">¿Aun no tienes cuenta?</string>
    <string name="Registrate">Registrate</string>
    <string name="olvidadoCuenta">¿Has olvidado tu cuenta?</string>
    <string name="Recuperar">Recuperar</string>

    <!--String de la Activity Cliente-->
    <string name="PostRecientes">Post recientes de </string>
    <string name="PostRecientesGratuitos">Post recientes gratuitos</string>
    <string name="botonEditar">Editar Perfil</string>

    <!--String de la Activity Registro-->
    <string name="nombreAplicacion">DRAWCOCO</string>
    <string name="nickname">NickName</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="password2">Repetir Contraseña</string>
    <string name="genero">Género</string>
    <string name="creadorCheck">¿Eres creador?</string>
    <string name="terminos">Aceptar términos</string>
    <string name="registrarse">Registrarse</string>

    <!--String de la Activity Filtrar-->
    <string name="textoOrdenar">Ordenar por:</string>
    <string name="ultimas">Últimas publicaciones</string>
    <string name="menorPrecio">Menor precio</string>
    <string name="mayorPrecio">Mayor precio</string>
    <string name="valoradas">Mejor valoradas</string>
    <string name="gratuitas">Gratuitas</string>
    <string name="textoCategorias">Categorias:</string>
    <string name="eligeCategoria">Categoria</string>
    <string name="btnFiltrar">Filtrar</string>

    <!--String de la Activity Ajustes-->
    <string name="textoIdioma">Idioma</string>
    <string name="eligeIdioma">Idioma</string>
    <string name="textoFuente">Cambiar fuente</string>
    <string name="eligeFuente">Cambiar fuente</string>
    <string name="textoTamano">Tamaño fuente</string>
    <string name="eligeTamano">Cambiar tamaño</string>
    <string name="tituloAjustes">Ajustes</string>
    <string name="aceptarAjustes">Aceptar</string>

    <!--String de la Activity Perfil Creador-->
    <string name="nombrePerfilCreador">Andrés</string>
    <string name="descripcionBreveCreador">Descripción Breve</string>
    <string name="sobreMiCreador">Sobre Mi</string>
    <string name="descripcionCompletaCreador">Descripción completa</string>
    <string name="tituloSuscripcion1Creador">Suscripción 1</string>
    <string name="tituloSuscripcion2Creador">Suscripción 2</string>
    <string name="tituloSuscripcion3Creador">Suscripción 3</string>
    <string name="precioSuscripcion1Creador">1€</string>
    <string name="precioSuscripcion2Creador">2€</string>
    <string name="precioSuscripcion3Creador">3€</string>
    <string name="descripcionSuscripcion1Creador">Descripción de la suscripción 1</string>
    <string name="descripcionSuscripcion2Creador">Descripción de la suscripción 2</string>
    <string name="descripcionSuscripcion3Creador">Descripción de la suscripción 3</string>
    <string name="botonSuscribirseCreador">Suscribirse</string>
    <string name="tituloPostRecientesCreador">Post Recientes</string>
    <string name="tituloPostCreador">Post 1</string>
    <string name="botonVerMas">Ver más</string>
    <!--Menu Desplegable-->
    <string name="modoNocturno">Modo Nocturno</string>
    <string name="ajustes">Ajustes</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="iniciarSesion">Iniciar Sesión</string>

    <!--Creación post-->
    <string name="hintTitulo">Título</string>
    <string name="hintDescripcion">Descripción</string>
    <string name="hintEtiquetas">Etiquetas</string>
    <string name="hintPrecio">Precio</string>
    <string name="textoPublicar">Publicar</string>
    <string name="textoImagen">Añadir Imagen</string>

</resources>
