<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonIniciarSesion"
        android:layout_width="112dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/forma_boton"
        android:text="@string/iniciarSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRegistro"
        android:layout_width="115dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/forma_boton"
        android:text="@string/registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIniciarSesion" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imagen"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/polloazul"
        app:civ_border_color="#0D2687"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="89dp"
        android:layout_height="34dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/caja_texto"
        android:text="@string/nombre"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toEndOf="@+id/imagenPerfil"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegistro" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="169dp"
        android:layout_height="32dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/caja_texto"
        android:text="@string/modoNocturno"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="103dp"
        android:layout_height="35dp"
        android:layout_marginTop="58dp"
        android:background="@drawable/caja_texto"
        android:text="@string/ajustes"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonCerrarSesion"
        android:layout_width="123dp"
        android:layout_height="49dp"
        android:layout_marginTop="86dp"
        android:background="@drawable/forma_boton"
        android:text="@string/cerrarSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>