<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Filtrar">

    <TextView
        android:id="@+id/textoordenar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/textoOrdenar"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/ultimas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Aquí crearemos los check box necesarios para poder filtrar las imagenes
    por precio,últimas imagenes o gratuitas o mejor valoradas-->
    <CheckBox
        android:id="@+id/ultimas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/caja_texto"
        android:text="@string/ultimas"
        app:layout_constraintBottom_toTopOf="@+id/menorprecio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoordenar" />

    <CheckBox
        android:id="@+id/menorprecio"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/caja_texto"
        android:text="@string/menorPrecio"
        app:layout_constraintBottom_toTopOf="@+id/mayorprecio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ultimas" />

    <CheckBox
        android:id="@+id/mayorprecio"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/caja_texto"
        android:text="@string/mayorPrecio"
        app:layout_constraintBottom_toTopOf="@+id/valoradas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menorprecio" />

    <CheckBox
        android:id="@+id/valoradas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/caja_texto"
        android:text="@string/valoradas"
        app:layout_constraintBottom_toTopOf="@+id/gratuitas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mayorprecio" />

    <CheckBox
        android:id="@+id/gratuitas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/caja_texto"
        android:checked="false"
        android:text="@string/gratuitas"
        app:layout_constraintBottom_toTopOf="@+id/textocategorias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valoradas" />

    <TextView
        android:id="@+id/textocategorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/textoCategorias"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/eligeCategoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gratuitas" />

    <!--En este punto crearemos un spinner que contiene las distintas categorias de nuestras imágenes-->
    <Spinner
        android:id="@+id/eligeCategoria"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/caja_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textocategorias" />

    <!--Con este botón aplicaremos los filtros y volveremos al menú desplegable-->
    <Button
        android:id="@+id/btnFiltrar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/forma_boton"
        android:text="@string/btnFiltrar"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eligeCategoria" />

    <!--Este es el logo de nuestra aplicación-->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>
