<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorFondo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imagenCabecera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/cajaMail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/textoMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            app:layout_constraintBottom_toBottomOf="@+id/cajaMail"
            app:layout_constraintEnd_toStartOf="@+id/cajaMail"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cajaMail" />

        <TextView
            android:id="@+id/textoContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contraseña"
            app:layout_constraintBottom_toBottomOf="@+id/cajaContraseña"
            app:layout_constraintEnd_toStartOf="@+id/cajaContraseña"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cajaContraseña" />

        <EditText
            android:id="@+id/cajaMail"
            android:layout_width="222dp"
            android:layout_height="31dp"
            android:background="@drawable/caja_texto"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:textAlignment="center"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/cajaContraseña"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textoMail"
            app:layout_constraintTop_toBottomOf="@+id/imagenCabecera" />

        <EditText
            android:id="@+id/cajaContraseña"
            android:layout_width="222dp"
            android:layout_height="31dp"
            android:background="@drawable/caja_texto"
            android:ems="10"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textAlignment="center"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/checkRecordarCuenta"
            app:layout_constraintEnd_toEndOf="@+id/cajaMail"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/cajaMail"
            app:layout_constraintTop_toBottomOf="@+id/cajaMail" />

        <CheckBox
            android:id="@+id/checkRecordarCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recordarCuenta"
            app:layout_constraintBottom_toTopOf="@+id/botonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cajaContraseña" />

        <Button
            android:id="@+id/botonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/forma_boton"
            android:text="@string/Login"
            app:layout_constraintBottom_toTopOf="@+id/textoTienesCuenta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkRecordarCuenta" />

        <TextView
            android:id="@+id/textoTienesCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noTienesCuenta"
            app:layout_constraintBottom_toTopOf="@+id/textoOlvidoCuenta"
            app:layout_constraintEnd_toStartOf="@+id/textoRegistrate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botonLogin" />

        <TextView
            android:id="@+id/textoOlvidoCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olvidadoCuenta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textoRecuperar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textoTienesCuenta" />

        <TextView
            android:id="@+id/textoRegistrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registrate"
            app:layout_constraintBottom_toBottomOf="@+id/textoTienesCuenta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textoTienesCuenta"
            app:layout_constraintTop_toTopOf="@+id/textoTienesCuenta"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textoRecuperar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Recuperar"
            app:layout_constraintBottom_toBottomOf="@+id/textoOlvidoCuenta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textoOlvidoCuenta"
            app:layout_constraintTop_toTopOf="@+id/textoOlvidoCuenta" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorBordes"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>